--- a/css/scss/_list-product.scss
+++ b/css/scss/_list-product.scss
@@ -164,6 +164,28 @@
                 clear: left;
             }
         }
+        .best-product {
+            .wr-best-product {
+                .heading-best-product {
+                    h2 {
+                        margin: 0px;
+                        font-weight: 600;
+                    }
+                    h2::after {
+                        content: "";
+                    display: inline-block;
+                    height: 0.50em;
+                    vertical-align: bottom;
+                    width: 74%;
+                    margin-right: -100%;
+                    margin-left: 30px;
+                        border-top: 4px solid $hitam;
+                    }
+                    margin-bottom: 30px;
+                }
+            }
+            padding-top: 70px;
+        }
     }
 
     .left {
