--- a/css/scss/_header-fix.scss
+++ b/css/scss/_header-fix.scss
@@ -166,6 +166,8 @@
                         padding: 0px;
                         width: 416px;
                         z-index: 910;
+                        height: 300px;
+                        overflow-x: auto;
                     }
                     .dropdown-backdrop {
                         display: none;
