--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -221,6 +221,8 @@
                     border-radius: 0px;
                     padding: 0px;
                     width: 400px;
+                    height: 300px;
+                    overflow-x: auto;
                 }
             }
             margin: 24px 0px;
