--- a/css/custom.css
+++ b/css/custom.css
@@ -96,7 +96,7 @@ body {
         color: #EE7E32; }
       .header .header-content .right li .dropdown-custom {
         top: 75px;
-        border-top: 3px solid #27AE60;
+        border-top: 3px solid #EE7E32;
         border-radius: 0px;
         padding: 0px;
         width: 400px;
