--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -217,7 +217,7 @@
                         padding: 15px;
                     }
                     top: 75px;
-                    border-top: 3px solid $hijau;
+                    border-top: 3px solid $orange;
                     border-radius: 0px;
                     padding: 0px;
                     width: 400px;
