nambah single page

--- a/css/scss/_page-cart.scss
+++ b/css/scss/_page-cart.scss
@@ -98,6 +98,7 @@
                             color: $putih;
                             letter-spacing: 2px;
                             font-family: 'PT Serif', serif;
+                            font-weight: 600;
                             -webkit-transition: .2s background-color ease-in;
                             -moz-transition: .2s background-color ease-in;
                             -ms-transition: .2s background-color ease-in;
@@ -114,6 +115,7 @@
                             color: $putih;
                             letter-spacing: 2px;
                             font-family: 'PT Serif', serif;
+                            font-weight: 600;
                             -webkit-transition: .2s background-color ease-in;
                             -moz-transition: .2s background-color ease-in;
                             -ms-transition: .2s background-color ease-in;
