--- a/css/custom.css
+++ b/css/custom.css
@@ -2153,6 +2153,7 @@ body {
           color: #fff;
           letter-spacing: 2px;
           font-family: 'PT Serif', serif;
+          font-weight: 600;
           -webkit-transition: .2s background-color ease-in;
           -moz-transition: .2s background-color ease-in;
           -ms-transition: .2s background-color ease-in;
@@ -2165,6 +2166,7 @@ body {
           color: #fff;
           letter-spacing: 2px;
           font-family: 'PT Serif', serif;
+          font-weight: 600;
           -webkit-transition: .2s background-color ease-in;
           -moz-transition: .2s background-color ease-in;
           -ms-transition: .2s background-color ease-in;
@@ -2223,5 +2225,126 @@ body {
           margin-top: 5px; }
         .page-konfirmasi .wr-page-konfirmasi .right .status .panel-body .list-status h4 {
           margin-bottom: 0px; }
+
+.single-produk {
+  padding: 70px 0px; }
+  .single-produk .wr-single-produk {
+    padding: 0px; }
+    .single-produk .wr-single-produk .left .produk .image-produk .tab-custom {
+      margin-bottom: 5px; }
+      .single-produk .wr-single-produk .left .produk .image-produk .tab-custom .pane-custom {
+        position: relative;
+        overflow: hidden; }
+      .single-produk .wr-single-produk .left .produk .image-produk .tab-custom img {
+        filter: brightness(70%);
+        -webkit-filter: brightness(70%);
+        -moz-filter: brightness(70%);
+        -ms-filter: brightness(70%);
+        -o-filter: brightness(70%);
+        -webkit-transition: 1s ease;
+        -moz-transition: 1s ease;
+        -ms-transition: 1s ease;
+        -o-transition: 1s ease;
+        transition: 1s ease;
+        width: 220px;
+        height: 250px; }
+      .single-produk .wr-single-produk .left .produk .image-produk .tab-custom img:hover {
+        filter: brightness(100%);
+        -webkit-filter: brightness(100%);
+        -moz-filter: brightness(100%);
+        -ms-filter: brightness(100%);
+        -o-filter: brightness(100%);
+        -webkit-transform: scale(1.08);
+        -moz-transform: scale(1.08);
+        -ms-transform: scale(1.08);
+        -o-transform: scale(1.08);
+        transform: scale(1.08); }
+    .single-produk .wr-single-produk .left .produk .image-produk .nav-custom img {
+      width: 50px;
+      height: 50px; }
+    .single-produk .wr-single-produk .left .produk .image-produk .nav-custom a {
+      padding: 0px;
+      border-radius: 0px; }
+    .single-produk .wr-single-produk .left .produk .image-produk .nav-pills > li.active > a, .single-produk .wr-single-produk .left .produk .image-produk .nav-pills > li.active > a:focus, .single-produk .wr-single-produk .left .produk .image-produk .nav-pills > li.active > a:hover {
+      background-color: transparent;
+      border: 1px solid #212121; }
+    .single-produk .wr-single-produk .left .produk .nama-produk .heading-produk {
+      padding-bottom: 15px;
+      border-bottom: 1px solid #ECECEC; }
+      .single-produk .wr-single-produk .left .produk .nama-produk .heading-produk h4 {
+        margin-top: 0px;
+        letter-spacing: 1px;
+        font-weight: 700;
+        font-size: 22px; }
+      .single-produk .wr-single-produk .left .produk .nama-produk .heading-produk button {
+        font-size: 12px;
+        font-family: 'PT Serif', serif;
+        letter-spacing: 2px;
+        font-weight: 600;
+        background-color: #FF5252;
+        color: #fff;
+        -webkit-transition: .2s background-color ease-in;
+        -moz-transition: .2s background-color ease-in;
+        -ms-transition: .2s background-color ease-in;
+        -o-transition: .2s background-color ease-in;
+        transition: .2s background-color ease-in; }
+      .single-produk .wr-single-produk .left .produk .nama-produk .heading-produk button:hover {
+        background-color: #212121; }
+    .single-produk .wr-single-produk .left .produk .nama-produk .body-produk h4 {
+      font-size: 28px;
+      font-weight: 700; }
+    .single-produk .wr-single-produk .left .produk .nama-produk .body-produk p {
+      font-family: 'Open Sans', sans-serif;
+      letter-spacing: 1px;
+      font-weight: 700;
+      font-size: 14px; }
+    .single-produk .wr-single-produk .left .produk .nama-produk .footer-produk button {
+      font-family: 'PT Serif', serif;
+      letter-spacing: 2px;
+      font-weight: 600;
+      margin: 15px 0px;
+      color: #fff;
+      font-size: 14px;
+      -webkit-transition: .2s background-color ease-in;
+      -moz-transition: .2s background-color ease-in;
+      -ms-transition: .2s background-color ease-in;
+      -o-transition: .2s background-color ease-in;
+      transition: .2s background-color ease-in; }
+    .single-produk .wr-single-produk .left .produk .nama-produk .footer-produk button:hover {
+      background-color: #212121; }
+    .single-produk .wr-single-produk .left .produk .nama-produk .footer-produk .beli {
+      background-color: #27AE60;
+      margin-right: 10px; }
+    .single-produk .wr-single-produk .left .produk .nama-produk .footer-produk .tambah-cart {
+      background-color: #47A1DE; }
+    .single-produk .wr-single-produk .left .detail-ulasan {
+      padding: 70px 0px; }
+      .single-produk .wr-single-produk .left .detail-ulasan .nav-tabs-custom li a {
+        font-family: 'PT Serif', serif;
+        font-size: 16px;
+        letter-spacing: 2px;
+        font-weight: 600;
+        color: #212121; }
+      .single-produk .wr-single-produk .left .detail-ulasan .nav-tabs > li.active > a, .single-produk .wr-single-produk .left .detail-ulasan .nav-tabs > li.active > a:focus, .single-produk .wr-single-produk .left .detail-ulasan .nav-tabs > li.active > a:hover {
+        color: #EE7E32; }
+      .single-produk .wr-single-produk .left .detail-ulasan .tab-custom {
+        padding: 50px 15px;
+        border: 1px solid #ddd;
+        border-top: transparent; }
+        .single-produk .wr-single-produk .left .detail-ulasan .tab-custom h4 {
+          margin-top: 0px;
+          letter-spacing: 2px;
+          font-family: 'Open Sans', sans-serif;
+          font-weight: 600; }
+        .single-produk .wr-single-produk .left .detail-ulasan .tab-custom p {
+          font-size: 15px;
+          font-family: 'Open Sans', sans-serif; }
+        .single-produk .wr-single-produk .left .detail-ulasan .tab-custom .informasi {
+          padding-bottom: 20px;
+          border-bottom: 1px solid #ddd; }
+          .single-produk .wr-single-produk .left .detail-ulasan .tab-custom .informasi p {
+            letter-spacing: 1px; }
+        .single-produk .wr-single-produk .left .detail-ulasan .tab-custom .detail-produk {
+          padding-top: 20px; }
 
 /*# sourceMappingURL=custom.css.map */
