--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -94,7 +94,7 @@
                 button.dropdown:hover {
                     color: $orange;
                 }
-                .dropdown-custom {
+                .dropdown-cart {
                     li {
                         .left-cart {
                             padding-left: 0px;
