--- a/css/scss/_single-produk.scss
+++ b/css/scss/_single-produk.scss
@@ -60,6 +60,14 @@
                             font-weight: 700;
                             font-size: 22px;
                         }
+                        .rate-wish {
+                            .rating {
+                                i {
+                                    color: $orange;
+                                }
+                                padding: 6px 0px;
+                            }
+                        }
                         button {
                             font-size: 12px;
                             font-family: 'PT Serif', serif;
