--- a/css/scss/_header-fix.scss
+++ b/css/scss/_header-fix.scss
@@ -35,7 +35,7 @@
                         color: $orange;
                         text-decoration: none;
                     }
-                    .dropdown-custom {
+                    .dropdown-cart {
                         li {
                             .left-cart {
                                 padding-left: 0px;
