--- a/css/scss/_menu-fix.scss
+++ b/css/scss/_menu-fix.scss
@@ -71,7 +71,7 @@
                         padding: 0px;
                         left: 0px;
                         clear: both;
-                        width: 160px;
+                        width: 100%;
                         position: absolute;
                     }
                     list-style: none;
