--- a/css/custom.css
+++ b/css/custom.css
@@ -447,7 +447,7 @@ body {
             padding: 0px;
             left: 0px;
             clear: both;
-            width: 100%;
+            width: auto;
             position: absolute; }
             .menu-fix .wr-menu-fix .menu ul li .dropdown-custom li {
               border-top: 1px solid #ECECEC;
